update/search-catalog

--- a/index.html
+++ b/index.html
@@ -75,5 +75,11 @@
     <script src="assets/js/jquery-3.6.1.min.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/script.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            ($('body').contents('div').remove());
+        });
+    </script>
 </body>
 </html>
