--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Aplikasi Service</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/shimmer.css">
 
     <link rel="stylesheet" href="assets/css/styles.css"/>
 </head>
 <body>
     <section id="nav">
         <nav class="navbar navbar-expand-lg navbar-dark bg-theme-blue">
-            <div class="container py-3">
+            <div class="container py-2">
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/racing-white.png" width="33" height="28" class="d-inline-block align-top" alt="">
                     Aplikasi Service
