--- a/catalog.html
+++ b/catalog.html
@@ -1,6 +1,6 @@
 <div class="p-3 sticky-top">
     <div class="d-flex justify-content-between">
-        <button class="d-inline w-auto input-group-text btn btn-filter" type="button" id="all" onclick="setType('all')">
+        <button class="d-inline w-auto input-group-text btn btn-filter select-type" type="button" id="all" onclick="setType('all')">
             All
         </button>
         <button class="d-inline w-auto input-group-text btn btn-filter" type="button" id="sparepart" onclick="setType('sparepart')">
@@ -35,6 +35,57 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="modalCatalog" tabindex="-1" aria-labelledby="modalCatalogLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <form id="create-catalog">
+                <div class="modal-header">
+                    <h5 class="modal-title">Tambah Data</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="name">Nama Produk</label>
+                        <input type="name" class="form-control" id="name" name="name" autocomplete="off" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Harga</label>
+                        <input type="price" class="form-control" id="price" name="price" autocomplete="off" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="type">Tipe</label>
+                        <select class="form-control" name="type" id="type" required>
+                            <option value="sparepart">Sparepart</option>
+                            <option value="oli">Oli</option>
+                            <option value="accessories">Accessories</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="img">Gambar</label>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="img" name="img" required>
+                            <label class="custom-file-label" id="custom-file-label">Upload gambar...</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<button class="btn btn-outline-theme" type="button" id="btn-add-catalog" data-toggle="modal" data-target="#modalCatalog">
+    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+    </svg>
+</button>
+
 <script>
     $("#search").on("keypress", (e) => {
         if (e.key === "Enter") search()
@@ -45,6 +96,28 @@
         $("#load_data").html("");
         start = 0;
         name = $("#search").val();
-        fecth(limit, start, name, type);
+        fetch(limit, start, name, type);
     }
+
+    let img = "";
+
+    $('input[type="file"]').change(function(e) {
+        $('#custom-file-label').html(e.target.files[0].name);
+        var reader = new FileReader();
+        reader.onload = function(e) {
+            img = e.target.result;
+        };
+        reader.readAsDataURL(this.files[0]);
+    });
+
+    $("form#create-catalog").submit(function(e) {
+        e.preventDefault();
+        let data = $(this).closest('form').serializeArray();
+        var reader = new FileReader();
+        data[data.length] = {
+            name: 'img',
+            value: img,
+        }
+        createCatalog(data);
+    });
 </script>
