story/update-and-delete-catalog

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     <script src="assets/js/jquery-3.6.1.min.js"></script>
     <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/sweetalert.js"></script>
     <script src="assets/js/script.js"></script>
 
     <script>
