--- a/catalog.html
+++ b/catalog.html
@@ -49,11 +49,11 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="name">Nama Produk</label>
-                        <input type="name" class="form-control" id="name" name="name" autocomplete="off" required>
+                        <input type="text" class="form-control" id="name" name="name" autocomplete="off" required>
                     </div>
                     <div class="form-group">
                         <label for="price">Harga</label>
-                        <input type="price" class="form-control" id="price" name="price" autocomplete="off" required>
+                        <input type="text" class="form-control" id="price" name="price" autocomplete="off" required>
                     </div>
                     <div class="form-group">
                         <label for="type">Tipe</label>
@@ -80,6 +80,53 @@
     </div>
 </div>
 
+<!-- Modal Edit -->
+<div class="modal fade" id="modalEditCatalog" tabindex="-1" aria-labelledby="modalEditCatalogLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <form id="edit-catalog">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Data</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="name-edit">Nama Produk</label>
+                        <input type="text" class="form-control" id="name-edit" name="name-edit" autocomplete="off" required>
+                        <input type="hidden" class="form-control" id="id" name="id" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <label for="price-edit">Harga</label>
+                        <input type="text" class="form-control" id="price-edit" name="price-edit" autocomplete="off" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="type-edit">Tipe</label>
+                        <select class="form-control" name="type-edit" id="type-edit" required>
+                            <option value="sparepart">Sparepart</option>
+                            <option value="oli">Oli</option>
+                            <option value="accessories">Accessories</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="img-edit">Gambar</label>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="img-edit" name="img-edit">
+                            <label class="custom-file-label" id="custom-file-label-edit">Upload gambar...</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" onclick="deleteCatalog(this)" id="btn-delete" data-id="">Hapus</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <button class="btn btn-outline-theme" type="button" id="btn-add-catalog" data-toggle="modal" data-target="#modalCatalog">
     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -96,12 +143,16 @@
         $("#load_data").html("");
         start = 0;
         name = $("#search").val();
-        fetch(limit, start, name, type);
+        lazzy_loader(limit);
+        if (action == "inactive") {
+            action = "active";
+            setTimeout(function () {
+                fetch(limit, start, name, type);
+            }, 1000);
+        }
     }
 
-    let img = "";
-
-    $('input[type="file"]').change(function(e) {
+    $('#img').change(function(e) {
         $('#custom-file-label').html(e.target.files[0].name);
         var reader = new FileReader();
         reader.onload = function(e) {
@@ -113,11 +164,34 @@
     $("form#create-catalog").submit(function(e) {
         e.preventDefault();
         let data = $(this).closest('form').serializeArray();
-        var reader = new FileReader();
         data[data.length] = {
             name: 'img',
             value: img,
         }
         createCatalog(data);
+    });
+
+    $('#img-edit').change(function(e) {
+        $('#custom-file-label-edit').html(e.target.files[0].name);
+        var reader = new FileReader();
+        reader.onload = function(e) {
+            img_edit = e.target.result;
+        };
+        reader.readAsDataURL(this.files[0]);
+    });
+
+    $("form#edit-catalog").submit(function(e) {
+        e.preventDefault();
+        let form = $(this).closest('form').serializeArray();
+        form[form.length] = {
+            name: 'img',
+            value: img_edit,
+        }
+        data = {};
+        form.forEach( (v, i) => {
+            key = v.name.replace("-edit", "")
+            data[key] = v.value;
+        });
+        updateCatalog(data);
     });
 </script>
