--- a/home.html
+++ b/home.html
@@ -1,3 +1,45 @@
-<div class="p-3">
-    INI HOME
+<div id="jumbotron">
+    <div class="container">
+        <div id="jumbotron-text">
+            <div class="row h-100">
+                <div class="col-sm-12 my-auto">
+                    <h1 class="text-left text-home">Aplikasi Service Motor</h1>
+                    <h5 class="text-left" style="color: #4b4b4b;">Booking Service gak pake ribet dan tanpa antri</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container mb-3">
+    <div class="slider pt-3">
+        <div class="slides container-product" id="div-slides">
+        </div>
+    </div>
+</div>
+<div id="text-fitur" class="container py-3 text-white">
+    <h2 class="text-center">Aplikasi yang #BikinGampang Urusan Servis Motor</h2>
+    <hr style="border-top: 1px solid #fff !important;">
+    <table class="w-100">
+        <tr>
+            <td width="24%" style="text-align: end; padding-right: 15px; padding-bottom: 15px;"><img src="/assets/images/booking.png" width="36" height="36"></td>
+            <td><h4>Booking Servis Cepat</h4></td>
+        </tr>
+        <tr>
+            <td width="24%" style="text-align: end; padding-right: 15px; padding-bottom: 15px;"><img src="/assets/images/price.png" width="36" height="36"></td>
+            <td><h4>Harga Bersahabat</h4></td>
+        </tr>
+        <tr>
+            <td width="24%" style="text-align: end; padding-right: 15px; padding-bottom: 15px;"><img src="/assets/images/easy.png" width="36" height="36"></td>
+            <td><h4>Mudah digunakan</h4></td>
+        </tr>
+    </table>
+</div>
+<div id="about" class="container pt-3">
+    <h3><b>About</b></h3>
+    <p>Aplikasi Service v.1.0</p>
+    <p class="m-0 p-0"><b>Apa itu Aplikasi Service?</b></p>
+    <p>Aplikasi Service adalah aplikasi yang memudahkan kebutuhan pengguna sepeda motor untuk melakukan servis rutin sebagai langkah perawatan motor.</p>
+    <p class="m-0 p-0"><b>Hubungi kami</b></p>
+    <p class="m-0 p-0">+62 000 0000 0000</p>
+    <p>info@aplikasiservice.abc</p>
 </div>
