--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/shimmer.css">
 
     <link rel="stylesheet" href="assets/css/styles.css"/>
+
+    <link rel="manifest" href="manifest.json" />
 </head>
 <body>
     <section id="nav">
@@ -23,16 +25,15 @@
                 <div class="dropdown">
                     <a id="cart" type="button" class="">
                         <div class="navbar-btn">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff" class="bi bi-bell-fill" viewBox="0 0 16 16">
-                                <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
-                                </svg>
-                            <span class="notify-custom" id="CheckOut">
-                                12
-                            </span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16" style="zoom: 125%;">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                            </svg>
+                            <span class="notify-custom-non-active" id="CheckOut"></span>
                         </div>
                     </a>
-                    <div class="dropdown-content">
-                        INI CONTENT
+                    
+                    <div class="dropdown-content" id="dropdown-content">
                     </div>
                 </div>
             </div>
@@ -73,10 +74,36 @@
         </div>
     </section>
 
+    <section id="login-form">
+        <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <form id="auth-login">
+                        <div class="modal-body">
+                            <h5 class="modal-title text-center mb-3">Form Login</h5>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary w-100">Login</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/js/jquery-3.6.1.min.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/sweetalert.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/register.js"></script>
 
     <script>
         $(document).ready(function () {
